fix: broken style on app component

--- a/web/src/app.module.scss
+++ b/web/src/app.module.scss
@@ -12,10 +12,10 @@
 .contentSigned::before {
   content: '';
   height: 100vh;
-  width: 420px;
+  width: 300px;
   background: url(./assets/background.svg) no-repeat;
   background-size: cover;
   position: absolute;
-  right: -200px;
+  right: -81px;
   top: 0;
 }
